--- a/pdfmr/static/templates2/contact.html
+++ b/pdfmr/static/templates2/contact.html
@@ -7,10 +7,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/slide.css">
-<script type="text/javascript" src="js/openclose.js"></script>
-<script type="text/javascript" src="js/fixmenu_pagetop.js"></script>
+<link rel="stylesheet" href="{% static 'templates2/css/style.css' %}">
+<link rel="stylesheet" href="{% static 'templates2/css/slide.css' %}">
+<script type="text/javascript" src="{% static 'templates2/js/openclose.js' %}"></script>
+<script type="text/javascript" src="{% static 'templates2/js/fixmenu_pagetop.js' %}"></script>
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -21,7 +21,7 @@
 
 <header>
 <div class="inner">
-<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="SAMPLE COMPANY"></a></h1>
+<h1 id="logo"><a href="index.html"><img src="{% static 'templates2/images/logo.png' %}" alt="SAMPLE COMPANY"></a></h1>
 <div id="contact">
 <p class="tel">TEL:00-0000-0000<span>受付：00:00〜00:00　定休日：水曜日</span></p>
 </div>
@@ -119,7 +119,7 @@
 
 <div class="list">
 <a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
+<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
 <h4>製品タイトル<span class="newicon">NEW</span></h4>
 <p>サンプルテキスト。サンプルテキスト。</p>
 </a>
@@ -127,7 +127,7 @@
 
 <div class="list">
 <a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
+<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
 <h4>製品タイトル</h4>
 <p>サンプルテキスト。サンプルテキスト。</p>
 </a>
@@ -135,7 +135,7 @@
 
 <div class="list">
 <a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
+<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
 <h4>製品タイトル</h4>
 <p>サンプルテキスト。サンプルテキスト。</p>
 </a>
@@ -165,7 +165,7 @@ TEL：03-0000-0000<br>
 
 <div class="list">
 <a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
+<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
 <h4>製品タイトル<span class="newicon">NEW</span></h4>
 <p>サンプルテキスト。サンプルテキスト。</p>
 </a>
@@ -173,7 +173,7 @@ TEL：03-0000-0000<br>
 
 <div class="list">
 <a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
+<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
 <h4>製品タイトル</h4>
 <p>サンプルテキスト。サンプルテキスト。</p>
 </a>
@@ -181,7 +181,7 @@ TEL：03-0000-0000<br>
 
 <div class="list">
 <a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
+<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
 <h4>製品タイトル</h4>
 <p>サンプルテキスト。サンプルテキスト。</p>
 </a>
@@ -189,7 +189,7 @@ TEL：03-0000-0000<br>
 
 <div class="list">
 <a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
+<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
 <h4>製品タイトル</h4>
 <p>サンプルテキスト。サンプルテキスト。</p>
 </a>
@@ -197,7 +197,7 @@ TEL：03-0000-0000<br>
 
 <div class="list">
 <a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
+<figure><img src="{% static 'templates2/images/sample1.jpg' %}" alt="写真の説明"></figure>
 <h4>製品タイトル</h4>
 <p>サンプルテキスト。サンプルテキスト。</p>
 </a>
@@ -217,8 +217,8 @@ TEL：03-0000-0000<br>
 </nav>
 
 <p>
-<a href="recruit.html"><img src="images/banner1.jpg" alt="採用情報" class="pc"></a>
-<a href="recruit.html"><img src="images/banner1_sh.jpg" alt="採用情報" class="sh"></a>
+<a href="recruit.html"><img src="{% static 'templates2/images/banner1.jpg' %}" alt="採用情報" class="pc"></a>
+<a href="recruit.html"><img src="{% static 'templates2/images/banner1_sh.jpg' %}" alt="採用情報" class="sh"></a>
 </p>
 <p>上のバナー画像は、801px以上の端末と800px以下とで画像２種類が切り替わります。<br>
 <a href="company.html#banner">詳しい説明はこちら。</a></p>
