ホームとリンクを設定

--- a/pdfmr/static/templates2/link.html
+++ b/pdfmr/static/templates2/link.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>クールイメージビジネスサイトサイト向け 無料ホームページテンプレート tp_cool7</title>
+<title>リンク</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -20,35 +20,35 @@
 <body>
 
 <header>
-<div class="inner">
-<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="SAMPLE COMPANY"></a></h1>
-<div id="contact">
-<p class="tel">TEL:00-0000-0000<span>受付：00:00〜00:00　定休日：水曜日</span></p>
-</div>
-</div>
+	<div class="inner">
+	<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="SAMPLE COMPANY"></a></h1>
+	<div id="contact">
+	<!--<p class="tel">TEL:00-0000-0000<span>受付：00:00〜00:00　定休日：水曜日</span></p>-->
+	</div>
+	</div>
 </header>
 
 <!--PC用（801px以上端末）メニュー-->
 <nav id="menubar">
-<ul class="inner">
-<li><a href="index.html">ホーム<span>HOME</span></a></li>
-<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
-<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
-<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>
-<li class="current"><a href="link.html">リンク<span>STAFF</span></a></li>
-<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-</ul>
-</nav>
-<!--小さな端末用（800px以下端末）メニュー-->
-<nav id="menubar-s">
-<ul>
-<li><a href="index.html">ホーム<span>HOME</span></a></li>
-<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
-<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
-<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>
-<li><a href="link.html">リンク<span>STAFF</span></a></li>
-<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-</ul>
+	<ul class="inner">
+		<li class="current"><a href="index.html">ホーム<span>HOME</span></a></li>
+		<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
+		<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
+		<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
+		<li><a href="link.html">リンク<span>STAFF</span></a></li>
+		<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+		</ul>
+		</nav>
+		<!--小さな端末用（800px以下端末）メニュー-->
+		<nav id="menubar-s" style="display: none;">
+		<ul>
+		<li><a href="index.html">ホーム<span>HOME</span></a></li>
+		<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
+		<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
+		<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>-->
+		<li><a href="link.html">リンク<span>STAFF</span></a></li>
+		<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+		</ul>
 </nav>
 
 <div id="contents" class="inner">
@@ -62,26 +62,26 @@
 <p>リンクのご案内。</p>
 
 <table class="ta1">
-<caption>見出しが必要であればここを使います</caption>
+<caption>応援団サイト</caption>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th><a href="https://chunichiouendan.wixsite.com/dragonsouendan">中日ドラゴンズ応援団</a></th>
+<td>中日ドラゴンズ応援団のホームページです。</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th><a href="http://tsubamegundan.com">全国ツバメ軍団</a></th>
+<td>東京ヤクルトスワローズ私設応援団のホームページです。</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th><a href="https://www.seihanet.com">全国星覇会</a></th>
+<td>横浜DeNAベイスターズ私設応援団のホームページです。</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th><a href="http://hiroshimao-en.com">全国広島東洋カープ私設応援団連盟</a></th>
+<td>全国広島東洋カープ私設応援団連盟のホームページです。</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th><a href="http://tigers-hm.info">ヒッティングマーチ委員会</a></th>
+<td>阪神タイガース応援団のホームページです。</td>
 </tr>
 <tr>
 <th><a href="#">サイト名</a></th>
@@ -105,65 +105,36 @@
 <div id="sub">
 
 <nav>
-<h2>Contents</h2>
-<ul class="submenu">
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-</nav>
-
-<nav>
-<ul class="submenu">
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
+	<h2>セ・リーグ</h2>
+	<ul class="submenu">
+	<li><a href="#">巨人</a></li>
+	<li><a href="#">DeNA</a></li>
+	<li><a href="#">阪神</a></li>
+	<li><a href="#">広島</a></li>
+	<li><a href="#">中日</a></li>
+	<li><a href="#">ヤクルト</a></li>
+	</ul>
+	</nav>
+	
+	<nav>
+	<h2>パ・リーグ</h2>
+	<ul class="submenu">
+	<li><a href="#">西武</a></li>
+	<li><a href="#">ソフトバンク</a></li>
+	<li><a href="#">楽天</a></li>
+	<li><a href="#">ロッテ</a></li>
+	<li><a href="#">日本ハム</a></li>
+	<li><a href="#">オリックス</a></li>
+	</ul>
 </nav>
 
 <section>
 
-<h2>製品情報</h2>
 
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル<span class="newicon">NEW</span></h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
 
 </section>
 
-<div class="box1">
-<h2>アクセス</h2>
-<p>東京都XX区XXXXビル３F<br>
-TEL：03-0000-0000<br>
-受付：9:00～16:00<br>
-定休日：土日祝</p>
-</div>
 
-</div>
 <!--/#sub-->
 
 </div>
@@ -173,51 +144,11 @@ TEL：03-0000-0000<br>
 
 <section>
 
-<h2>製品情報</h2>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル<span class="newicon">NEW</span></h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
 
 </section>
 
 <nav>
+<!--
 <h2>Contents</h2>
 <ul class="submenu">
 <li><a href="#">メニューサンプル</a></li>
@@ -226,14 +157,10 @@ TEL：03-0000-0000<br>
 <li><a href="#">メニューサンプル</a></li>
 <li><a href="#">メニューサンプル</a></li>
 </ul>
+
+-->
 </nav>
 
-<p>
-<a href="recruit.html"><img src="images/banner1.jpg" alt="採用情報" class="pc"></a>
-<a href="recruit.html"><img src="images/banner1_sh.jpg" alt="採用情報" class="sh"></a>
-</p>
-<p>上のバナー画像は、801px以上の端末と800px以下とで画像２種類が切り替わります。<br>
-<a href="company.html#banner">詳しい説明はこちら。</a></p>
 
 </div>
 <!--/#side-->
@@ -242,7 +169,7 @@ TEL：03-0000-0000<br>
 <!--/#contents-->
 
 <footer>
-
+<!--
 <div id="footermenu" class="inner">
 <ul>
 <li><a href="#">メニューサンプル</a></li>
@@ -285,6 +212,7 @@ TEL：03-0000-0000<br>
 <li><a href="#">メニューサンプル</a></li>
 </ul>
 </div>
+-->
 <!--/footermenu-->
 
 <div id="copyright">
