--- a/pdfmr/static/templates2/index.html
+++ b/pdfmr/static/templates2/index.html
@@ -2,7 +2,7 @@
 <html lang="ja"><head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>クールイメージビジネスサイトサイト向け 無料ホームページテンプレート tp_cool7</title>
+<title>プロ野球選手応援歌</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -22,7 +22,7 @@
 <div class="inner">
 <h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="SAMPLE COMPANY"></a></h1>
 <div id="contact">
-<p class="tel">TEL:00-0000-0000<span>受付：00:00〜00:00　定休日：水曜日</span></p>
+<!--<p class="tel">TEL:00-0000-0000<span>受付：00:00〜00:00　定休日：水曜日</span></p>-->
 </div>
 </div>
 </header>
@@ -31,9 +31,9 @@
 <nav id="menubar">
 <ul class="inner">
 <li class="current"><a href="index.html">ホーム<span>HOME</span></a></li>
-<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
+<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 <li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
-<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>
+<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
 <li><a href="link.html">リンク<span>STAFF</span></a></li>
 <li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
 </ul>
@@ -42,9 +42,9 @@
 <nav id="menubar-s" style="display: none;">
 <ul>
 <li><a href="index.html">ホーム<span>HOME</span></a></li>
-<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
+<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 <li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
-<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>
+<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>-->
 <li><a href="link.html">リンク<span>STAFF</span></a></li>
 <li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
 </ul>
@@ -88,30 +88,6 @@
 
 <section>
 
-<h2>テンプレートのご利用前に必ずお読み下さい</h2>
-
-<h3>利用規約のご案内</h3>
-<p>このテンプレートは、<a href="http://template-party.com/">Template Party</a>にて無料配布している『ビジネスサイトサイト向け 無料ホームページテンプレート tp_cool7』です。必ずダウンロード先のサイトの<a href="http://template-party.com/read.html">利用規約</a>をご一読の上でご利用下さい。</p>
-<p><strong class="color1">■HP最下部の著作表示『Web Design:Template-Party』は無断で削除しないで下さい。</strong><br>
-わざと見えなく加工する事も禁止です。</p>
-<p><strong class="color1">■下部の著作を外したい場合は</strong><br>
-<a href="http://template-party.com/">Template-Party</a>の<a href="http://template-party.com/member.html">ライセンス契約</a>を行う事でHP下部の著作を外す事ができます。</p>
-
-<h3>当テンプレートにはお問い合わせフォーム（自動フォーム：試用版）がセットされています</h3>
-<p><a href="contact.html">contact.html</a>と同じ３項目のお問い合わせフォームを簡単に使えるようにセットしています。</p>
-<p><strong class="color1">■自動フォームを使う場合（※編集に入る前にご確認下さい）</strong><br>
-あなたのメールアドレス設定と、簡単な編集だけで使えます。<a href="http://template-party.com/file/formgen_manual_set2.html" target="_blank">詳しくはこちらのマニュアルをご覧下さい。</a></p>
-<p><strong class="color1">■自動フォームを使わない場合</strong><br>
-テンプレートに梱包されている「form.html」「confirm.html」「finish.html」の3枚のファイルを削除して下さい。</p>
-
-<h3>メニューなどの開閉ブロック（openclose.js）について</h3>
-<p>当テンプレートの開閉ブロックパーツは<a href="http://www.crytus.co.jp/">有限会社クリタス様</a>提供のプログラムを使用しています。openclose.jsファイルは改変せずにご利用下さい。<br>
-また、当サイトのテンプレート以外に使いたいなど、「プログラムのみ」を使う場合は<a href="http://template-party.com/free_program/openclose_license.html">こちらの規約</a>をお守り下さい。</p>
-
-<h3>当テンプレートの詳しい使い方は</h3>
-<p><a href="company.html#about">こちらをご覧下さい。</a></p>
-
-</section>
 
 </div>
 <!--/#main-->
@@ -119,63 +95,35 @@
 <div id="sub">
 
 <nav>
-<h2>Contents</h2>
-<ul class="submenu">
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-</nav>
-
-<nav>
-<ul class="submenu">
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
+	<h2>セ・リーグ</h2>
+	<ul class="submenu">
+	<li><a href="#">巨人</a></li>
+	<li><a href="#">DeNA</a></li>
+	<li><a href="#">阪神</a></li>
+	<li><a href="#">広島</a></li>
+	<li><a href="#">中日</a></li>
+	<li><a href="#">ヤクルト</a></li>
+	</ul>
+	</nav>
+	
+	<nav>
+	<h2>パ・リーグ</h2>
+	<ul class="submenu">
+	<li><a href="#">西武</a></li>
+	<li><a href="#">ソフトバンク</a></li>
+	<li><a href="#">楽天</a></li>
+	<li><a href="#">ロッテ</a></li>
+	<li><a href="#">日本ハム</a></li>
+	<li><a href="#">オリックス</a></li>
+	</ul>
 </nav>
 
 <section>
 
-<h2>製品情報</h2>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル<span class="newicon">NEW</span></h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
 
 </section>
 
-<div class="box1">
-<h2>アクセス</h2>
-<p>東京都XX区XXXXビル３F<br>
-TEL：03-0000-0000<br>
-受付：9:00～16:00<br>
-定休日：土日祝</p>
-</div>
+
 
 </div>
 <!--/#sub-->
@@ -187,50 +135,10 @@ TEL：03-0000-0000<br>
 
 <section>
 
-<h2>製品情報</h2>
 
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル<span class="newicon">NEW</span></h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
-
-<div class="list">
-<a href="service2.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>製品タイトル</h4>
-<p>サンプルテキスト。サンプルテキスト。</p>
-</a>
-</div>
 
 </section>
-
+<!--
 <nav>
 <h2>Contents</h2>
 <ul class="submenu">
@@ -241,14 +149,16 @@ TEL：03-0000-0000<br>
 <li><a href="#">メニューサンプル</a></li>
 </ul>
 </nav>
+-->
 
+<!--
 <p>
 <a href="recruit.html"><img src="images/banner1.jpg" alt="採用情報" class="pc"></a>
 <a href="recruit.html"><img src="images/banner1_sh.jpg" alt="採用情報" class="sh"></a>
 </p>
 <p>上のバナー画像は、801px以上の端末と800px以下とで画像２種類が切り替わります。<br>
 <a href="company.html#banner">詳しい説明はこちら。</a></p>
-
+-->
 </div>
 <!--/#side-->
 
@@ -256,7 +166,7 @@ TEL：03-0000-0000<br>
 <!--/#contents-->
 
 <footer>
-
+<!--
 <div id="footermenu" class="inner">
 <ul>
 <li><a href="#">メニューサンプル</a></li>
@@ -299,6 +209,7 @@ TEL：03-0000-0000<br>
 <li><a href="#">メニューサンプル</a></li>
 </ul>
 </div>
+-->
 <!--/footermenu-->
 
 <div id="copyright">
