--- a/pdfmr/static/templates2/top.html
+++ b/pdfmr/static/templates2/top.html
@@ -31,7 +31,7 @@
 <!--PC用（801px以上端末）メニュー-->
 <nav id="menubar">
 <ul class="inner">
-<li class="current"><a href="{% static 'templates2/index.html' %}">ホーム<span>HOME</span></a></li>
+<li class="current"><a href="index.html">ホーム<span>HOME</span></a></li>
 <!-- <li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 <li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
 <li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
