セリーグのサイトを追加

--- a/pdfmr/static/templates2/giants.html
+++ b/pdfmr/static/templates2/giants.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>リンク</title>
+<title>読売ジャイアンツ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -58,43 +58,131 @@
 
 <section>
 
-<h2>リンク</h2>
-<p>リンクのご案内。</p>
+<h2>読売ジャイアンツ　応援歌
+</h2>
+
 
 <table class="ta1">
-<caption>応援団サイト</caption>
+<!-- <caption>応援団サイト</caption> -->
 <tr>
-<th><a href="https://chunichiouendan.wixsite.com/dragonsouendan">中日ドラゴンズ応援団</a></th>
-<td>中日ドラゴンズ応援団のホームページです。</td>
-</tr>
-<tr>
-<th><a href="http://tsubamegundan.com">全国ツバメ軍団</a></th>
-<td>東京ヤクルトスワローズ私設応援団のホームページです。</td>
-</tr>
-<tr>
-<th><a href="https://www.seihanet.com">全国星覇会</a></th>
-<td>横浜DeNAベイスターズ私設応援団のホームページです。</td>
-</tr>
-<tr>
-<th><a href="http://hiroshimao-en.com">全国広島東洋カープ私設応援団連盟</a></th>
-<td>全国広島東洋カープ私設応援団連盟のホームページです。</td>
-</tr>
-<tr>
-<th><a href="http://tigers-hm.info">ヒッティングマーチ委員会</a></th>
-<td>阪神タイガース応援団のホームページです。</td>
-</tr>
-<tr>
-<th><a href="#">サイト名</a></th>
+<th><a href="#">陽岱鋼</a></th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
+<th><a href="#">中島宏之</a></th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
+<th><a href="#">坂本勇人</a></th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr>
+<tr>
+<th><a href="#">丸佳浩</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">亀井善行</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">澤村拓一</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">大竹寛</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">菅野智之</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">岩隈久志</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">小林誠司</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">野上亮磨</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<tr>
+<th><a href="#">大城卓三</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">岡本和真</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">炭谷銀仁朗</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+	<th><a href="#">田口麗斗</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">吉川尚輝</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">畠世周</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+	<th><a href="#">桜井俊貴</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+	<th><a href="#">石川慎吾</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">立岡宗一郎</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">重信慎之介</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+	<th><a href="#">鍬原拓也</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">田中俊太</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">宮國椋丞</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">原辰徳</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">ヒッターズテーマA</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">ヒッターズテーマB</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<tr>
+	<th><a href="#">ピッチャーズテーマ1</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">ピッチャーズテーマ2</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+
 </table>
 
 </section>
