--- a/pdfmr/static/templates2/dragons.html
+++ b/pdfmr/static/templates2/dragons.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>リンク</title>
+<title>中日ドラゴンズ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -58,42 +58,84 @@
 
 <section>
 
-<h2>リンク</h2>
-<p>リンクのご案内。</p>
+<h2>中日ドラゴンズ　応援歌
+</h2>
+
 
 <table class="ta1">
-<caption>応援団サイト</caption>
+<!-- <caption>応援団サイト</caption> -->
 <tr>
-<th><a href="https://chunichiouendan.wixsite.com/dragonsouendan">中日ドラゴンズ応援団</a></th>
-<td>中日ドラゴンズ応援団のホームページです。</td>
-</tr>
-<tr>
-<th><a href="http://tsubamegundan.com">全国ツバメ軍団</a></th>
-<td>東京ヤクルトスワローズ私設応援団のホームページです。</td>
-</tr>
-<tr>
-<th><a href="https://www.seihanet.com">全国星覇会</a></th>
-<td>横浜DeNAベイスターズ私設応援団のホームページです。</td>
-</tr>
-<tr>
-<th><a href="http://hiroshimao-en.com">全国広島東洋カープ私設応援団連盟</a></th>
-<td>全国広島東洋カープ私設応援団連盟のホームページです。</td>
-</tr>
-<tr>
-<th><a href="http://tigers-hm.info">ヒッティングマーチ委員会</a></th>
-<td>阪神タイガース応援団のホームページです。</td>
-</tr>
-<tr>
-<th><a href="#">サイト名</a></th>
+<th><a href="#">京田陽太</a></th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
+<th><a href="#">高橋周平</a></th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
+<th><a href="#">藤井淳志</a></th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">阿部寿樹</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">平田良介</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">根尾昂</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">大島洋平</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">遠藤一星</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">大野将太</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">アルモンテ</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">加藤匠馬</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<tr>
+<th><a href="#">福田永将</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">堂上直倫</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+<th><a href="#">ビシエド</a></th>
+<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+	<th><a href="#">桂依央利</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">野手汎用</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	</tr>
+	<tr>
+	<th><a href="#">外国人選手汎用</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+</tr>
+<tr>
+	<th><a href="#">投手汎用</a></th>
+	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr>
 </table>
 
@@ -107,12 +149,12 @@
 <nav>
 	<h2>セ・リーグ</h2>
 	<ul class="submenu">
-		<li><a href="giants.html">巨人</a></li>
-		<li><a href="baystars.html">DeNA</a></li>
-		<li><a href="tigers.html">阪神</a></li>
-		<li><a href="carp.html">広島</a></li>
-		<li><a href="dragons.html">中日</a></li>
-		<li><a href="swallows.html">ヤクルト</a></li>
+	<li><a href="giants.html">巨人</a></li>
+	<li><a href="baystars.html">DeNA</a></li>
+	<li><a href="tigers.html">阪神</a></li>
+	<li><a href="carp.html">広島</a></li>
+	<li><a href="dragons.html">中日</a></li>
+	<li><a href="swallows.html">ヤクルト</a></li>
 	</ul>
 	</nav>
 	
