--- a/pdfmr/static/templates2/index.html
+++ b/pdfmr/static/templates2/index.html
@@ -68,20 +68,8 @@
 <section id="new">
 <h2>更新情報・お知らせ</h2>
 <dl>
-<dt>2018/11/22</dt>
-<dd>tp_cool7配布開始。<span class="newicon">NEW</span></dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
+	<dt>2019/2/16</dt>
+	<dd>ホームページ作成開始。<span class="newicon">NEW</span></dd>
 </dl>
 <p class="r">»&nbsp;<a href="#">過去ログ</a></p>
 </section>
@@ -97,12 +85,12 @@
 <nav>
 	<h2>セ・リーグ</h2>
 	<ul class="submenu">
-	<li><a href="#">巨人</a></li>
-	<li><a href="#">DeNA</a></li>
-	<li><a href="#">阪神</a></li>
-	<li><a href="#">広島</a></li>
-	<li><a href="#">中日</a></li>
-	<li><a href="#">ヤクルト</a></li>
+		<li><a href="giants.html">巨人</a></li>
+		<li><a href="baystars.html">DeNA</a></li>
+		<li><a href="tigers.html">阪神</a></li>
+		<li><a href="carp.html">広島</a></li>
+		<li><a href="dragons.html">中日</a></li>
+		<li><a href="swallows.html">ヤクルト</a></li>
 	</ul>
 	</nav>
 	
