--- a/pdfmr/static/templates2/dragons.html
+++ b/pdfmr/static/templates2/dragons.html
@@ -81,8 +81,12 @@
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr>
 <tr>
-<th><a href="#">平田良介</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th><a>平田良介</a>
+	<audio controls>
+		<source src="hirata.mp3" type="audio/mp3">
+		<p>ご利用のブラウザは音声ファイルの再生に対応していません。</p>
+</audio></th>
+<td>チームを勝利へ誘え 全力プレーで<br>Let's go 平田 行こうぜ 歓喜の瞬間へと</td>
 </tr>
 <tr>
 <th><a href="#">根尾昂</a></th>
