中日応援歌の歌詞を追加・背番号欄を追加

--- a/pdfmr/static/templates2/dragons.html
+++ b/pdfmr/static/templates2/dragons.html
@@ -65,82 +65,102 @@
 <table class="ta1">
 <!-- <caption>応援団サイト</caption> -->
 <tr>
-<th><a href="#">京田陽太</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">1</th>
+	<th class="p_name">京田陽太</th>
+	<td>【1】青き大空に 今、勝利の華を 輝くその翼で 示せよ京田<br>【2】オイ! オイ! 京田! オイ! オイ! そーれ!</td>
 </tr>
 <tr>
-<th><a href="#">高橋周平</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">3</th>
+	<th class="p_name">高橋周平</th>
+	<td>球は伸びゆく永遠に 頂きへ 更なる高み 行け周平</td>
 </tr>
 <tr>
-<th><a href="#">藤井淳志</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">4</th>
+	<th class="p_name">藤井淳志</th>
+	<td>勝利のアーチをかけろ スピード生かして攻めろ 我らの想いのせて 輝く明日へ</td>
 </tr>
 <tr>
-<th><a href="#">阿部寿樹</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">5</th>
+	<th class="p_name">阿部寿樹</th>
+	<td>鍛えた技で 魅せろ力の限り 新たな時代へと 今スタート</td>
 </tr>
 <tr>
-<th><a>平田良介</a></th>
-<td>チームを勝利へ誘え 全力プレーで<br>Let's go 平田 行こうぜ 歓喜の瞬間へと
-<audio controls>
-<source src="hirata.mp3" type="audio/mp3">
-<p>ご利用のブラウザは音声ファイルの再生に対応していません。</p>
-</audio>
-</td>
+	<th class="p_num">6</th>
+	<th class="p_name">平田良介</th>
+	<td>チームを勝利へ誘え 全力プレーで Let's go 平田 行こうぜ 歓喜の瞬間へと<br>
+		<audio controls>
+			<source src="hirata.mp3" type="audio/mp3">
+			<p>ご利用のブラウザは音声ファイルの再生に対応していません。</p>
+		</audio>
+	</td>
 </tr>
 <tr>
-<th><a href="#">根尾昂</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">7</th>
+	<th class="p_name">根尾昂</th>
+	<td>【前奏：オーオオー…】<br>
+		覇道極める男 今だ魅せてやれ根尾昂 その名響かせて いざ終わりなき道をゆく<br>【パワプロVer】<br>
+		昂! GO! GO! 昂! オイ! オイ! オイ! 今だチャンスだ打て!</td>
 </tr>
 <tr>
-<th><a href="#">大島洋平</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">8</th>
+	<th class="p_name">大島洋平</th>
+	<td>飛び出せ大島 疾風のごとく その手でチャンスを 切り開け</td>
 </tr>
 <tr>
-<th><a href="#">遠藤一星</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">23</th>
+	<th class="p_name">遠藤一星</th>
+	<td>【前奏：輝きを放て 遠藤一星】<br>
+		そのプレーで セ界一世風靡しろ 燦爛と今輝く 一番星よ</td>
 </tr>
 <tr>
-<th><a href="#">大野将太</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">27</th>
+	<th class="p_name">大野将太</th>
+	<td>強肩武器に 強気で攻めろ 息吹け 大野奨太</td>
 </tr>
 <tr>
-<th><a href="#">アルモンテ</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">42</th>
+	<th class="p_name">アルモンテ</th>
+	<td>強く逞しい 頼れるナイスガイ 巧みなその一振りで 栄光へ進め</td>
 </tr>
 <tr>
-<th><a href="#">加藤匠馬</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">52</th>
+	<th class="p_name">加藤匠馬</th>
+	<td>闘志を燃やせ 気迫で守り抜け 勝利の歓声 受けて羽ばたけ</td>
 </tr>
 <tr>
-<tr>
-<th><a href="#">福田永将</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">55</th>
+	<th class="p_name">福田永将</th>
+	<td>雄々しく構えた その姿 迷いなく振れ 福田永将</td>
 </tr>
 <tr>
-<th><a href="#">堂上直倫</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">63</th>
+	<th class="p_name">堂上直倫</th>
+	<td>勇敢に立ち向かえ 一打にかける想い 魅せろ 放て 頼むぞ直倫</td>
 </tr>
 <tr>
-<th><a href="#">ビシエド</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">66</th>
+	<th class="p_name">ビシエド</th>
+	<td>【通常Ver】<br>期待を背に受けて 飛ばせ遠く 今放つアーチ 世界を翔けろ<br>【チャンスVer】<br>ビシエド! ホームラン! 勝負強さ煌めき エルタンケ打て</td>
 </tr>
 <tr>
-	<th><a href="#">桂依央利</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">野手汎用</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">外国人選手汎用</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">68</th>
+	<th class="p_name">桂依央利</th>
+	<td>遥か連なり 愛織り成す光 栄光へと導け その強肩で</td>
 </tr>
 <tr>
-	<th><a href="#">投手汎用</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num"></th>
+	<th class="p_name">野手汎用</th>
+	<td>さあ今だ放て 熱き想い 勝利への弾道を 描け○○</td>
+</tr>
+<tr>
+	<th class="p_num"></th>
+	<th class="p_name">外国人汎用</th>
+	<td>海を越えて 夢をかなえる 勝利掴め 我らと共に ラーラララーラ ラララララーラ Let’s go together Get the Victory</td>
+</tr>
+<tr>
+	<th class="p_num"></th>
+	<th class="p_name">投手汎用</th>
+	<td>魂ボールにこめて 立ち向かえ全力で 今こそ我らを勝利へ 導け○○</td>
 </tr>
 </table>
 
