全球団のサイトを追加

--- a/pdfmr/static/templates2/carp.html
+++ b/pdfmr/static/templates2/carp.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>広島東洋カープ</title>
+<title>横浜DeNAベイスターズ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -18,13 +18,11 @@
 </head>
 
 <body>
+	
 
 <header>
 	<div class="inner">
 	<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="SAMPLE COMPANY"></a></h1>
-	<div id="contact">
-	<!--<p class="tel">TEL:00-0000-0000<span>受付：00:00〜00:00　定休日：水曜日</span></p>-->
-	</div>
 	</div>
 </header>
 
@@ -32,23 +30,17 @@
 <nav id="menubar">
 	<ul class="inner">
 		<li class="current"><a href="index.html">ホーム<span>HOME</span></a></li>
-		<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
-		<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
-		<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
-		<li><a href="link.html">リンク<span>STAFF</span></a></li>
-		<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-		</ul>
-		</nav>
-		<!--小さな端末用（800px以下端末）メニュー-->
-		<nav id="menubar-s" style="display: none;">
-		<ul>
+		<li><a href="link.html">リンク<span>LINK</span></a></li>
+		<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
+	</ul>
+</nav>
+<!--小さな端末用（800px以下端末）メニュー-->
+<nav id="menubar-s" style="display: none;">
+	<ul>
 		<li><a href="index.html">ホーム<span>HOME</span></a></li>
-		<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
-		<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
-		<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>-->
-		<li><a href="link.html">リンク<span>STAFF</span></a></li>
-		<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-		</ul>
+		<li><a href="link.html">リンク<span>LINK</span></a></li>
+		<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
+	</ul>
 </nav>
 
 <div id="contents" class="inner">
@@ -58,131 +50,179 @@
 
 <section>
 
-<h2>広島東洋カープ　応援歌
+<h2>横浜DeNAベイスターズ　応援歌
 </h2>
 
 
 <table class="ta1">
-<!-- <caption>応援団サイト</caption> -->
 <tr>
-<th><a href="#">陽岱鋼</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">0</th>
+	<th class="p_name">中井大介</th>
+	<td>授かりしその力で　描いた景色は
+		横浜で輝く　おのれの勇姿</td>
 </tr>
 <tr>
-<th><a href="#">中島宏之</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">1</th>
+	<th class="p_name">桑原将志</th>
+	<td>
+		今だクワ喰らいつけ　燃えろガッツマン　突っ走れどこまでも　勝利を呼ぶ男<br>
+	</td>
 </tr>
 <tr>
-<th><a href="#">坂本勇人</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">2</th>
+	<th class="p_name">ロペス</th>
+	<td>勝負がかかる　痺[しび]れる瞬間
+		流れを我らに　アニモ　ロペス</td>
 </tr>
 <tr>
-<th><a href="#">丸佳浩</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">3</th>
+	<th class="p_name">梶谷隆幸</th>
+	<td>
+		新たな歴史に　その名を刻め　梶谷隆幸　蒼い韋駄天[いだてん]
+	</td>
 </tr>
 <tr>
-<th><a href="#">亀井善行</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">4</th>
+	<th class="p_name">伊藤裕季也</th>
+	<td>熱い想いを　ひと振りにかけろ
+		白球に夢をのせて　さあフルスイング<br>
+	</td>
 </tr>
 <tr>
-<th><a href="#">澤村拓一</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">5</th>
+	<th class="p_name">倉本寿彦</th>
+	<td>かっとばせ　見せろ男意気
+		さあ打つぞ　勝利へ導け</td>
 </tr>
 <tr>
-<th><a href="#">大竹寛</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">8</th>
+	<th class="p_name">神里和毅</th>
+	<td>琉球の波に乗って　潮風を背に受け
+		冴えわたる神業  オー島人[しまんちゅ]の星</td>
 </tr>
 <tr>
-<th><a href="#">菅野智之</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">9</th>
+	<th class="p_name">大和</th>
+	<td>敵はすぐ目の前だ　大いなる闘志燃やせ
+		響け和の魂　輝ける未来へ</td>
 </tr>
 <tr>
-<th><a href="#">岩隈久志</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">10</th>
+	<th class="p_name">戸柱恭孝</th>
+	<td>奮い立て　横浜の大黒柱よ
+		さあ打て飛ばせ勝利への　扉を開け</td>
 </tr>
 <tr>
-<th><a href="#">小林誠司</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">23</th>
+	<th class="p_name">オースティン</th>
+	<td>夢を運ぶひと振り　君が刻むヒストリー
+		​蒼く光る彗星　打てよタイラー　オースティン</td>
 </tr>
 <tr>
-<th><a href="#">野上亮磨</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">29</th>
+	<th class="p_name">伊藤光</th>
+	<td>歓喜の瞬間を　その手で創るため
+		高鳴る胸に秘められた　覚悟を示す時</td>
 </tr>
 <tr>
-<tr>
-<th><a href="#">大城卓三</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">31</th>
+	<th class="p_name">柴田竜拓</th>
+	<td>狙い澄ましたミートと　巧みなグラブ捌[さば]きは
+		努力というかけらの　結晶の証だ</td>
 </tr>
 <tr>
-<th><a href="#">岡本和真</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">33</th>
+	<th class="p_name">乙坂智</th>
+	<td>Oh～　横浜の誇り　胸に抱いて
+		道を切り開けニコ</td>
 </tr>
 <tr>
-<th><a href="#">炭谷銀仁朗</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">36</th>
+	<th class="p_name">髙城俊人</th>
+	<td>強肩強打のスゴイ奴
+		勝利呼び込むサイン　髙城俊人</td>
 </tr>
 <tr>
-	<th><a href="#">田口麗斗</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">吉川尚輝</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">畠世周</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">39</th>
+	<th class="p_name">嶺井博希</th>
+	<td>積み上げたものを今　プレーで示せ
+		横浜の守り神　嶺井博希</td>
 </tr>
 <tr>
-	<th><a href="#">桜井俊貴</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">42</th>
+	<th class="p_name">石川雄洋</th>
+	<td>栄冠掴むその日まで　恐れず飛び込めベースへ
+		君の熱き血潮で　燃えろ！雄洋！</td>
 </tr>
 <tr>
-	<th><a href="#">石川慎吾</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">立岡宗一郎</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">重信慎之介</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+	<th class="p_num">44</th>
+	<th class="p_name">佐野恵太</th>
+	<td>蒼き戦士の闘志　果敢に突き進め
+		​ハマの空に弧を描け　進めShiny Road</td>
 </tr>
 <tr>
-	<th><a href="#">鍬原拓也</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">田中俊太</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">宮國椋丞</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">原辰徳</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">ヒッターズテーマA</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">ヒッターズテーマB</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<tr>
-	<th><a href="#">ピッチャーズテーマ1</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-	<tr>
-	<th><a href="#">ピッチャーズテーマ2</a></th>
-	<td>ここに説明など入れて下さい。サンプルテキスト。</td>
-	</tr>
-
+	<th class="p_num">51</th>
+	<th class="p_name">宮﨑敏郎</th>
+	<td>さあ振り抜け宮﨑　気迫あふれるパワーで
+		夢描け鮮やかに　空高く</td>
+</tr>
+<tr>
+	<th class="p_num">52</th>
+	<th class="p_name">細川成也</th>
+	<td>港に現る新星　若きスラッガー　セイヤ！(叫ぶ)
+		勝利の一撃たたきこめ　自分を信じて突き進め</td>
+</tr>
+<tr>
+	<th class="p_num">99</th>
+	<th class="p_name">ソト</th>
+	<td>Going on ソト！ Touch'em all ソト！　君は嵐のカリビアン
+		見せつけてやれ　パワフルスイング</td>
+</tr>
+<tr>
+	<th class="p_num"></th>
+	<th class="p_name">代打のテーマ</th>
+	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
+		いざ戦え「○○！」　幾多の試練を乗り越えて
+		いざ進め「○○！」　その手で舵をとれ　</td>
+</tr>
+<tr>
+	<th class="p_num"></th>
+	<th class="p_name">捕手のテーマ</th>
+	<td>※２コーラス目から各応援歌<br>
+		港男は誰もみんな
+		答えが出せるさ　GO GO Let's GO!</td>
+</tr>
+<tr>
+	<th class="p_num"></th>
+	<th class="p_name">右打者汎用テーマ</th>
+	<td>ここで一発○○　ここで一発○○
+		ライトへレフトへ　ホームラン
+		それゆけそれゆけ　それゆけ○○</td>
+</tr>
+<tr>
+	<th class="p_num"></th>
+	<th class="p_name">左打者汎用テーマ</th>
+	<td>出た出たついに　必殺バットマン
+		白い弾丸打ち込んで　ガッツポーズだ</td>
+</tr>
+<tr>
+	<th class="p_num"></th>
+	<th class="p_name">投手のテーマ</th>
+	<td>闘うぞ　闘志みなぎらせて
+		勝利の海　行くぞベイスターズ</td>
+</tr>
+<tr>
+	<th class="p_num"></th>
+	<th class="p_name">先発左腕のテーマ</th>
+	<td>左腕がうなれば　狙いは外さない
+		ピンポイントの技　攻めて攻めろ○○〈名前〉</td>
+</tr>
+<tr>
+	<th class="p_num"></th>
+	<th class="p_name">外国人投手のテーマ</th>
+	<td>×× ×××（オイ！）　×× ×××（オイ！）
+		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
+</tr>
 </table>
 
 </section>
@@ -195,33 +235,26 @@
 <nav>
 	<h2>セ・リーグ</h2>
 	<ul class="submenu">
-		<li><a href="giants.html">巨人</a></li>
-		<li><a href="baystars.html">DeNA</a></li>
-		<li><a href="tigers.html">阪神</a></li>
-		<li><a href="carp.html">広島</a></li>
-		<li><a href="dragons.html">中日</a></li>
-		<li><a href="swallows.html">ヤクルト</a></li>
+	<li><a href="giants.html">巨人</a></li>
+	<li><a href="baystars.html">DeNA</a></li>
+	<li><a href="tigers.html">阪神</a></li>
+	<li><a href="carp.html">広島</a></li>
+	<li><a href="dragons.html">中日</a></li>
+	<li><a href="swallows.html">ヤクルト</a></li>
 	</ul>
 	</nav>
 	
 	<nav>
 	<h2>パ・リーグ</h2>
 	<ul class="submenu">
-	<li><a href="#">西武</a></li>
-	<li><a href="#">ソフトバンク</a></li>
-	<li><a href="#">楽天</a></li>
-	<li><a href="#">ロッテ</a></li>
-	<li><a href="#">日本ハム</a></li>
-	<li><a href="#">オリックス</a></li>
+	<li><a href="lions.html">西武</a></li>
+	<li><a href="hawks.html">ソフトバンク</a></li>
+	<li><a href="eagles.html">楽天</a></li>
+	<li><a href="marines.html">ロッテ</a></li>
+	<li><a href="fighters.html">日本ハム</a></li>
+	<li><a href="buffaloes.html">オリックス</a></li>
 	</ul>
 </nav>
-
-<section>
-
-
-
-</section>
-
 
 <!--/#sub-->
 
@@ -230,24 +263,7 @@
 
 <div id="side">
 
-<section>
 
-
-</section>
-
-<nav>
-<!--
-<h2>Contents</h2>
-<ul class="submenu">
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-
--->
-</nav>
 
 
 </div>
@@ -257,54 +273,10 @@
 <!--/#contents-->
 
 <footer>
-<!--
-<div id="footermenu" class="inner">
-<ul>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-<ul>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-<ul>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-<ul>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-<ul>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-</div>
--->
-<!--/footermenu-->
+
 
 <div id="copyright">
-<small>Copyright&copy; <a href="index.html">SAMPLE COMPANY</a> All Rights Reserved.</small>
+<small>Copyright&copy; <a href="index.html">プロ野球選手 応援歌</a> All Rights Reserved.</small>
 <span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </div>
 
