--- a/pdfmr/static/templates2/dragons.html
+++ b/pdfmr/static/templates2/dragons.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -22,9 +23,6 @@
 <header>
 	<div class="inner">
 	<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="SAMPLE COMPANY"></a></h1>
-	<div id="contact">
-	<!--<p class="tel">TEL:00-0000-0000<span>受付：00:00〜00:00　定休日：水曜日</span></p>-->
-	</div>
 	</div>
 </header>
 
@@ -32,23 +30,17 @@
 <nav id="menubar">
 	<ul class="inner">
 		<li class="current"><a href="index.html">ホーム<span>HOME</span></a></li>
-		<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
-		<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
-		<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li> -->
-		<li><a href="link.html">リンク<span>STAFF</span></a></li>
-		<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-		</ul>
-		</nav>
-		<!--小さな端末用（800px以下端末）メニュー-->
-		<nav id="menubar-s" style="display: none;">
-		<ul>
+		<li><a href="link.html">リンク<span>LINK</span></a></li>
+		<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
+	</ul>
+</nav>
+<!--小さな端末用（800px以下端末）メニュー-->
+<nav id="menubar-s" style="display: none;">
+	<ul>
 		<li><a href="index.html">ホーム<span>HOME</span></a></li>
-		<!--<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
-		<li><a href="service.html">製品紹介<span>SERVICE</span></a></li>
-		<li><a href="recruit.html">採用情報<span>RECRUIT</span></a></li>-->
-		<li><a href="link.html">リンク<span>STAFF</span></a></li>
-		<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-		</ul>
+		<li><a href="link.html">リンク<span>LINK</span></a></li>
+		<li><a href="contact.html">サイトポリシー<span>SITE POLICY</span></a></li>
+	</ul>
 </nav>
 
 <div id="contents" class="inner">
@@ -58,12 +50,10 @@
 
 <section>
 
-<h2>中日ドラゴンズ　応援歌
-</h2>
+<h2>中日ドラゴンズ　応援歌</h2>
 
 
 <table class="ta1">
-<!-- <caption>応援団サイト</caption> -->
 <tr>
 	<th class="p_num">1</th>
 	<th class="p_name">京田陽太</th>
@@ -72,7 +62,9 @@
 <tr>
 	<th class="p_num">3</th>
 	<th class="p_name">高橋周平</th>
-	<td>球は伸びゆく永遠に 頂きへ 更なる高み 行け周平</td>
+	<td>
+		球は伸びゆく永遠に 頂きへ 更なる高み 行け周平<br>
+	</td>
 </tr>
 <tr>
 	<th class="p_num">4</th>
@@ -82,13 +74,16 @@
 <tr>
 	<th class="p_num">5</th>
 	<th class="p_name">阿部寿樹</th>
-	<td>鍛えた技で 魅せろ力の限り 新たな時代へと 今スタート</td>
+	<td>
+		鍛えた技で 魅せろ力の限り 新たな時代へと 今スタート<br>
+		<audio src="hirata.mp3"　controls controlslist = "nodownload"></audio>
+	</td>
 </tr>
 <tr>
 	<th class="p_num">6</th>
 	<th class="p_name">平田良介</th>
 	<td>チームを勝利へ誘え 全力プレーで Let's go 平田 行こうぜ 歓喜の瞬間へと<br>
-		<audio controls>
+		<audio controls controlslist = "nodownload">
 			<source src="hirata.mp3" type="audio/mp3">
 			<p>ご利用のブラウザは音声ファイルの再生に対応していません。</p>
 		</audio>
@@ -186,12 +181,12 @@
 	<nav>
 	<h2>パ・リーグ</h2>
 	<ul class="submenu">
-	<li><a href="#">西武</a></li>
-	<li><a href="#">ソフトバンク</a></li>
-	<li><a href="#">楽天</a></li>
-	<li><a href="#">ロッテ</a></li>
-	<li><a href="#">日本ハム</a></li>
-	<li><a href="#">オリックス</a></li>
+	<li><a href="lions.html">西武</a></li>
+	<li><a href="hawks.html">ソフトバンク</a></li>
+	<li><a href="eagles.html">楽天</a></li>
+	<li><a href="marines.html">ロッテ</a></li>
+	<li><a href="figthers.html">日本ハム</a></li>
+	<li><a href="buffaloes.html">オリックス</a></li>
 	</ul>
 </nav>
 
@@ -209,26 +204,6 @@
 
 <div id="side">
 
-<section>
-
-
-</section>
-
-<nav>
-<!--
-<h2>Contents</h2>
-<ul class="submenu">
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-
--->
-</nav>
-
-
 </div>
 <!--/#side-->
 
@@ -236,54 +211,11 @@
 <!--/#contents-->
 
 <footer>
-<!--
-<div id="footermenu" class="inner">
-<ul>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-<ul>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-<ul>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-<ul>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-<ul>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-<li><a href="#">メニューサンプル</a></li>
-</ul>
-</div>
--->
+
 <!--/footermenu-->
 
 <div id="copyright">
-<small>Copyright&copy; <a href="index.html">SAMPLE COMPANY</a> All Rights Reserved.</small>
+<small>Copyright&copy; <a href="index.html">プロ野球選手 応援歌</a> All Rights Reserved.</small>
 <span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </div>
 
